@@ -1,3 +1,7 @@
+2015/01/16:
+Fixed a couple bugs in Makefile and src/Makefile which would cause compilation
+and installation to fail with "TARGET=byte". (Reported by Daniel Dickman.)
+
 2015/01/01:
 Incompatible change of the incremental API.
 The entry point main_incremental is now named Incremental.main.
